--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 *.pyc
 *.cpython-36.pyc
 test.py
+__pycache__/ChatRoom.cpython-36.pyc
+__pycache__/db_Handler.cpython-36.pyc
+__pycache__/fcm.cpython-36.pyc
+__pycache__/identifier.cpython-36.pyc
+__pycache__/Record.cpython-36.pyc
